--- a/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
@@ -28,25 +28,19 @@
                             <a href="@Url.Action("ActivityAreas","ActivityArea")">Faailiyet alanları</a>
                             <a class="dt-menu-expand">+</a>
                         </li>
-                        @*<li class="menu-item-simple-parent">
-            <a href="@Url.Action("UpdateContact","Admin")">İletişim</a>
-            <a class="dt-menu-expand">+</a>
-        </li>
+                        <li class="menu-item-simple-parent">
+                            <a href="@Url.Action("SharedLinks","SharedLink")">Faydalı Linkler</a>
+                            <a class="dt-menu-expand">+</a>
+                        </li>
+                        <li class="menu-item-simple-parent">
+                            <a href="@Url.Action("UpdateContact","Admin")">İletişim</a>
+                            <a class="dt-menu-expand">+</a>
+                        </li>
 
-
-
-        <li class="menu-item-simple-parent">
-            <a href="@Url.Action("GetAllApplyFrom","HR")">IK</a>
-            <a class="dt-menu-expand">+</a>
-        </li>
-        <li class="menu-item-simple-parent">
-            <a href="@Url.Action("SharedLinks","SharedLink")">Faydalı Linkler</a>
-            <a class="dt-menu-expand">+</a>
-        </li>
-        <li class="menu-item-simple-parent">
-            <a href="@Url.Action("PracticalInformations","PracticalInformations")">Faydalı Bilgiler</a>
-            <a class="dt-menu-expand">+</a>
-        </li>*@
+                        <li class="menu-item-simple-parent">
+                            <a href="@Url.Action("Applys","HR")">IK Başvurular</a>
+                            <a class="dt-menu-expand">+</a>
+                        </li>
 
                     </ul>
                 </nav>
