--- a/UskudarDenetim.UI/Views/Shared/_AdminLayout.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_AdminLayout.cshtml
@@ -55,6 +55,11 @@
                 }
             }
         });
+        $("input[name='FileOne']").on("change", function (event1) {
+            debugger;
+            src1 = URL.createObjectURL(event1.target.files[0]);
+            document.querySelector("[for=FileOne]").style.backgroundImage = 'url(' + src1 + ')';
+        });
     </script>
     <script>
         function OnSuccessSubscription(response) {
@@ -84,7 +89,7 @@
             jQuery('#error-modal-body').html(message)
             jQuery('#error-modal').modal();
         }
-
+      
     </script>
 </body>
 </html>
