Mail Gönderme Linki Panele eklendi

--- a/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
@@ -41,7 +41,10 @@
                             <a href="@Url.Action("Applys","HR")">IK Başvurular</a>
                             <a class="dt-menu-expand">+</a>
                         </li>
-
+                          <li class="menu-item-simple-parent">
+                            <a href="@Url.Action("Index","Mail")">Mail Gönder</a>
+                            <a class="dt-menu-expand">+</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
