toplantı talepleri ve mail gönderme

--- a/UskudarDenetim.UI/Views/HR/Index.cshtml
+++ b/UskudarDenetim.UI/Views/HR/Index.cshtml
@@ -59,7 +59,7 @@
                 </p>
 
                 <p class="dt-sc-one-half column ">
-                    @Html.TextBoxFor(x => x.File, new { @type = "file", @name = "file", @class = "form-control" })
+                    @Html.TextBoxFor(x => x.File, new { @type = "file", @name = "file", @class = "form-control",@required="required" })
                 </p>
 
                 <p class="dt-sc-one-half column">
