--- a/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
@@ -1,6 +1,11 @@
-﻿<div id="header-wrapper">
+﻿<style>
+    .custom-font{
+        font-size:11px !important;
+    }
+</style>
+<div id="header-wrapper">
     <header class="header">
-        <div class="container">
+        <div class="">
             <div id="menu-container">
                 <nav id="main-menu">
                     <div id="dt-menu-toggle" class="dt-menu-toggle">
@@ -13,38 +18,44 @@
             <a class="dt-menu-expand">+</a>
         </li>*@
                         <li class="menu-item-simple-parent @(ViewContext.RouteData.Values["controller"].ToString().Equals("Circular")? "current_page_item":"")">
-                            <a href="@Url.Action("CircularList","Circular")">Sirküler</a>
+                            <a class="custom-font" href="@Url.Action("CircularList","Circular")">Sirküler</a>
                         </li>
                         <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("Services","Service")">Hizmetler</a>
+                            <a class="custom-font" href="@Url.Action("Services","Service")">Hizmetler</a>
                         </li>
                         <li class="menu-item-simple-parent mce_backcolor">
-                            <a href="@Url.Action("Employees","TeamMember")">Çalışanlar</a>
+                            <a class="custom-font" href="@Url.Action("Employees","TeamMember")">Çalışanlar</a>
                         </li>
                         <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("PracticalInformations","PracticalInformations")">Pratik Bilgiler</a>
+                            <a class="custom-font" href="@Url.Action("PracticalInformations","PracticalInformations")">Pratik Bilgiler</a>
                         </li>
                         <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("ActivityAreas","ActivityArea")">Faailiyet alanları</a>
-                            <a class="dt-menu-expand">+</a>
+                            <a class="custom-font" href="@Url.Action("ActivityAreas","ActivityArea")">Faailiyet Alanları</a>
+
                         </li>
                         <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("SharedLinks","SharedLink")">Faydalı Linkler</a>
-                            <a class="dt-menu-expand">+</a>
+                            <a class="custom-font" href="@Url.Action("SharedLinks","SharedLink")">Faydalı Linkler</a>
+
                         </li>
                         <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("UpdateContact","Admin")">İletişim</a>
+                            <a class="custom-font" href="@Url.Action("UpdateContact","Admin")">İletişim</a>
                             <a class="dt-menu-expand">+</a>
                         </li>
 
                         <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("Applys","HR")">IK Başvurular</a>
-                            <a class="dt-menu-expand">+</a>
+                            <a class="custom-font" href="@Url.Action("Applys","HR")">IK Başvurular</a>
+
                         </li>
-                          <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("Index","Mail")">Mail Gönder</a>
-                            <a class="dt-menu-expand">+</a>
+                        <li class="menu-item-simple-parent">
+                            <a class="custom-font" href="@Url.Action("AllAppointment","Home")">Randevu Talepleri</a>
+
                         </li>
+                        <li class="menu-item-simple-parent">
+                            <a class="custom-font" href="@Url.Action("Index","Mail")">Mail Gönder</a>
+
+                        </li>
+
+
                     </ul>
                 </nav>
             </div>
